@@ -29,6 +29,7 @@
       <import plugin="org.eclipse.debug.core"/>
       <import plugin="org.eclipse.cdt.debug.core"/>
       <import plugin="org.eclipse.cdt.launch"/>
+      <import plugin="org.eclipse.core.expressions"/>
       <import plugin="org.eclipse.core.variables"/>
       <import plugin="org.eclipse.debug.ui"/>
       <import plugin="org.eclipse.linuxtools.profiling.launch"/>
@@ -38,6 +39,7 @@
       <import plugin="org.eclipse.birt.chart.device.extension" version="2.3.1" match="greaterOrEqual"/>
       <import plugin="org.eclipse.birt.chart.engine" version="2.3.1" match="greaterOrEqual"/>
       <import plugin="org.eclipse.birt.chart.engine.extension" version="2.3.1" match="greaterOrEqual"/>
+      <import plugin="org.eclipse.birt.chart.device.svg" version="2.3.1" match="greaterOrEqual"/>
       <import plugin="org.eclipse.birt.core" version="2.3.1" match="greaterOrEqual"/>
       <import plugin="org.eclipse.cdt.debug.ui"/>
       <import plugin="org.eclipse.emf.common"/>
@@ -47,10 +49,9 @@
       <import plugin="org.mozilla.rhino"/>
       <import plugin="org.eclipse.core.filesystem"/>
       <import plugin="org.eclipse.ui.editors"/>
-      <import feature="org.eclipse.linuxtools.profiling" version="0.2.0" match="greaterOrEqual"/>
-      <import plugin="org.eclipse.core.expressions"/>
-      <import plugin="org.eclipse.birt.chart.device.svg" version="2.3.1" match="greaterOrEqual"/>
       <import plugin="org.eclipse.cdt.ui"/>
+      <import feature="org.eclipse.linuxtools.profiling" version="0.2.0" match="greaterOrEqual"/>
+      <import plugin="org.eclipse.help"/>
    </requires>
 
    <plugin
@@ -97,6 +98,13 @@
 
    <plugin
          id="org.eclipse.linuxtools.valgrind.doc"
+         download-size="0"
+         install-size="0"
+         version="0.0.0"
+         unpack="false"/>
+
+   <plugin
+         id="org.eclipse.linuxtools.valgrind.ui.editor"
          download-size="0"
          install-size="0"
          version="0.0.0"
