@@ -1,3 +1,7 @@
+2009-07-21  Elliott Baron  <ebaron@redhat.com>
+
+	* feature.xml: Added ui.editor plugin. Recomputed dependencies.
+
 2009-06-26  Elliott Baron  <ebaron@redhat.com>
 
 	* feature.xml: Added doc plugin. Recomputed dependencies.
